--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "4.15.3 ",
     "body-parser": "^1.17.2",
+    "express": "4.15.3 ",
+    "mime-db": "^1.35.0",
     "node-couchdb": "^1.1.1"
   }
 }
